Particle grid not using modifier stack #47902

Closed
opened 2016-03-23 18:21:31 +01:00 by Jonathan Lampel · 8 comments

System Information
Windows 10
GeForce GTX 660 Ti

Blender Version
Broken: 2.77 22a2853

Short description of error

Particle grid distribution for face or volume emission does not take modifier stack into account

Exact steps for others to reproduce the error

  • Add a subsurf modifier
  • Add new particle system
  • Set emission distribution to grid

Grid_Modifiers_bug.blend

2016-03-23 10_13_09-⚓ Report a Bug.jpg

**System Information** Windows 10 GeForce GTX 660 Ti **Blender Version** Broken: 2.77 22a2853 **Short description of error** Particle grid distribution for face or volume emission does not take modifier stack into account **Exact steps for others to reproduce the error** - Add a subsurf modifier - Add new particle system - Set emission distribution to grid [Grid_Modifiers_bug.blend](https://archive.blender.org/developer/F298098/Grid_Modifiers_bug.blend) ![2016-03-23 10_13_09-⚓ Report a Bug.jpg](https://archive.blender.org/developer/F298099/2016-03-23_10_13_09-__Report_a_Bug.jpg)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @JonathanLampel-4

Added subscriber: @JonathanLampel-4

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2016-03-25 22:42:50 +01:00

Ok… particles are a rather broken area, but will try a tentative fix. Please check nightly builds tomorrow and report if there is any issue. Otherwise we'll just disable/hide this option for grid distribution, it’s currently not implemented in code…

Ok… particles are a rather broken area, but will try a *tentative* fix. Please check nightly builds tomorrow and report if there is any issue. Otherwise we'll just disable/hide this option for grid distribution, it’s currently not implemented in code…

This issue was referenced by 2bd3acf7cd

This issue was referenced by 2bd3acf7cd27c0c3ee77b10d56b91c3b03226d39

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by a959771626

This issue was referenced by a95977162687863763e7a26a18e9d91c31227c1e

This issue was referenced by 201d393862

This issue was referenced by 201d393862243013cd23693794c55d80e62a424a
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47902
No description provided.